kubernetes/sample-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-lb
  labels:
    run: sample-app-lb
spec:
  type: LoadBalancer
  ports:
  - port: 8080
  selector:
    app: sample
