kubernetes/sample-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-ingress
spec:
  rules:
  - host: "demo.yolsuzgezgin.org"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sample-app-lb
            port:
              number: 8080
